--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "recharts": "^3.2.0",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
